# doctown-v9

./: .gitignore  Cargo.toml  LLM_BACKENDS.md  VLLM_SETUP.md  benchmark_llm.sh  run_vllm_server.sh  run_with_cuda_diagnostics.sh  run_with_vllm.sh
src/: chunking.rs  clustering.rs  docgen.rs  docpack.rs  embedding.rs  ingest.rs  llm.rs  main.rs
