[package]
name = "doctown"
version = "9.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
ollama-rs = { version = "0.3.3", features = ["stream"] }
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "blob"] }
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0.17"
tokenizers = "0.22.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
url = "2.5.7"
zip = "6.0.0"
